--- a/RentTracker.Web/App/package.json
+++ b/RentTracker.Web/App/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "apexcharts": "^3.8.0",
     "axios": "^0.18.1",
+    "core-js": "^2.6.5",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "moment": "^2.24.0",
@@ -23,6 +24,7 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-plugin-pwa": "^3.8.0",
     "@vue/cli-service": "^3.7.0",
