--- a/RentTracker.Web/RentTracker.Web.csproj
+++ b/RentTracker.Web/RentTracker.Web.csproj
@@ -114,6 +114,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.4.0" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
